force-app/main/default/objects/Opportunity/fields/counter__c.field-meta.xml
<CustomField>
    <fullName>counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>