force-app/main/default/objects/Opportunity/fields/Latest_Line_created__c.field-meta.xml
<CustomField>
    <fullName>Latest_Line_created__c</fullName>
    <label>Latest Line created</label>
    <summarizedField>OpportunityLineItem.CreatedDate</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>