force-app/main/default/objects/Opportunity/fields/oldest_Line_created__c.field-meta.xml
<CustomField>
    <fullName>oldest_Line_created__c</fullName>
    <description>oldest Line created</description>
    <label>oldest Line created</label>
    <summarizedField>OpportunityLineItem.CreatedDate</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>